# cli-bin

./: Cargo.toml  LICENSE  README.md
data/: cities.json
src/: main.rs
