[package]
name = "cli-bin"
version = "0.1.0"
authors = ["Tom Jakubowski <tom@crystae.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
anyhow = "1.0.31"
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }
